--- a/src/index.scss
+++ b/src/index.scss
@@ -20,8 +20,9 @@ $font-size: 1.5rem;
 
 .main-body {
 	margin: 0;
-	max-width: 100vw;
+	// max-width: 100vw;
 	width: 100vw;
+	// min-width: 320px;
 
 }
 
@@ -30,6 +31,7 @@ $font-size: 1.5rem;
 	padding: 0;
 	margin: 0;
 	height: 100vh;
+	// min-width: 320px;
 
 	background: linear-gradient(60deg, black, #141414, #012e40);
 	background-color: $background-color-secondary;
