--- a/src/pages/Projects/assets/advenced-slider/AdvencedSlider.scss
+++ b/src/pages/Projects/assets/advenced-slider/AdvencedSlider.scss
@@ -7,7 +7,7 @@
     height: 450px;
     overflow: hidden;
     justify-self: center;
-    // align-self: center;
+    align-self: center;
     
     box-sizing: border-box;
     display: flex;
