--- a/src/pages/navShared/scss/Footer.scss
+++ b/src/pages/navShared/scss/Footer.scss
@@ -1,9 +1,10 @@
 @use "../../../index.scss";
 
 .footer {
+	margin: 0 -25px;
 	// position:;
 	bottom: 0;
-	width: 100%;
+	width: 120%;
 	// margin: 0px;
 	.wave{
 		// background-color: aqua;
