--- a/src/pages/navShared/scss/Sidebar.scss
+++ b/src/pages/navShared/scss/Sidebar.scss
@@ -52,8 +52,8 @@ header {
 			}
 
 			&.active {
-				color: index.$first-color;
-				border: index.$first-color 2px solid;
+				color: index.$third-color;
+				border: index.$third-color 2px solid;
 			}
 		}
 
