--- a/src/index.scss
+++ b/src/index.scss
@@ -1,48 +1,58 @@
-$background-color: #002333;
+$background-color: #151f30;
 $background-color-secondary: #141414;
 $background-gradient: linear-gradient(135deg, black, #141414, #012e40);
 
 $text-color: #f4e2de;
 
-$first-color: #d94f04;
+// $first-color: #d94f04;
+$first-color: #e3371e;
+// $second-color: #3d5b81;
 $second-color: #3d5b81;
-$third-color: #9bc0d9;
+$third-color: #0593a2;
+// $fourth-color: #0593A2;
+$background-color: #151f30;
 
 $screen-size: 1000px;
 $font-size: 1.5rem;
 
 @mixin coloredFont {
-	background: linear-gradient(to right, red , $second-color);
-	background-clip: text;
-	-webkit-text-fill-color: transparent;
+    background: linear-gradient(to right, red, $second-color);
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
-
 .main-body {
-	margin: 0;
-	// max-width: 100vw;
-	width: 100vw;
-	// min-width: 320px;
-
+    margin: 0;
+    // max-width: 100vw;
+    // width: 100vw;
+    width: 100%;
+    max-width: 100vw;
+    overflow: hidden;
+    // min-width: 320px;
 }
 
 :root {
-	box-sizing: border-box;
-	padding: 0;
-	margin: 0;
-	height: 100vh;
-	// min-width: 320px;
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    height: 100vh;
+    // min-width: 320px;
 
-	background: linear-gradient(60deg, black, #141414, #012e40);
-	background-color: $background-color-secondary;
-	background-attachment: fixed;
-	overflow-x: hidden;
-	color: $text-color;
+    // background: linear-gradient(60deg, black, #141414, #012e40);
+    background-color: $background-color;
+    background-attachment: fixed;
+    overflow-x: hidden;
+    color: $text-color;
 
-	font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande", "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-	// font-family: cursive;
-	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    // font-family: cursive;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
-	font-weight: 400;
-	font-size: 14px;
+    font-weight: 400;
+    font-size: 14px;
+
+    font-synthesis: none;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
