--- a/src/pages/Projects/Cards-data/Cards.scss
+++ b/src/pages/Projects/Cards-data/Cards.scss
@@ -19,6 +19,7 @@
         flex-wrap: wrap;
         width: 100%;
         gap: 30px;
+        margin: 20px 0;
 
         justify-content: center;
         align-items: center;
@@ -31,8 +32,8 @@
             box-shadow: 0 0 15px index.$third-color;
             overflow: hidden;
             padding-bottom: 5px;
-            background-color: index.$second-color;
-            border-radius: 15px;
+            background: index.$background-gradient;
+            // border-radius: 15px;
 
             position: relative;
 
@@ -42,21 +43,24 @@
             &::after {
                 content: '';
                 position: absolute;
-                background-color: inherit;
+                background-color: index.$background-color;
                 width: 130px;
                 height: 30px;
                 left: 0;
                 top: 179px;
                 border-top-right-radius: 45px;
-                // border-top-left-radius: 10px;
                 border-top: 10px solid index.$background-color;
                 border-right: 10px solid index.$background-color;
             }
-
-            img {
-                // width: 100%;
-                // height: 205px;
+            .img-box {
                 height: 65%;
+                overflow: hidden;
+
+                img {
+                    display: block;
+                    justify-self: center;
+                    height: 100%;
+                }
             }
 
             .text-box {
@@ -75,6 +79,7 @@
                     color: index.$first-color;
                     background-color: index.$background-color-secondary;
                     border-radius: 10px;
+                    box-shadow: 0 0 15px index.$third-color;
                 }
 
                 p {
@@ -88,9 +93,9 @@
                     cursor: pointer;
                     text-decoration: none;
                     border: none;
-                    background-color: index.$background-color-secondary;
+                    background-color: index.$third-color;
                     color: index.$text-color;
-                    box-shadow: 0 0 10px;
+                    box-shadow: 0 0 10px index.$third-color;
                     transition: all linear 0.5s;
                     position: absolute;
                     top: -20px;
@@ -98,11 +103,9 @@
                     z-index: 10;
 
                     &:hover {
-                        box-shadow: 0 0 20px;
+                        box-shadow: 0 0 20px index.$first-color;
                     }
                 }
-
-             
             }
         }
     }
