--- a/src/pages/components/tech_bars/TechBars.scss
+++ b/src/pages/components/tech_bars/TechBars.scss
@@ -8,6 +8,7 @@
     background-color: #242424;
     overflow: hidden;
     margin: 0 15vw;
+    z-index: 2;
     .box {
         border-radius: 15px;
         margin: 40px;
