--- a/src/pages/Home/About-Third-Box.scss
+++ b/src/pages/Home/About-Third-Box.scss
@@ -1,88 +1,109 @@
-@use "../../index.scss";
-
+@use '../../index.scss';
 
 .about {
-	.third-block {
-		width: 100%;
-		margin: 20px;
-		margin-bottom: 100px;
+    .third-block {
+        width: 100%;
+        margin: 20px;
+        margin-bottom: 100px;
+        z-index: 2;
 
-		p {
-			text-align: center;
-			margin: 0;
-			padding: 20px;
-		}
-	}
+    }
 
-	.fourth-block {
-		width: 100%;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: center;
-		margin: 20px;
-		margin-bottom: 100px;
+    .fourth-block {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        margin: 20px;
+        margin-bottom: 100px;
 
-		h2 {
-			@include index.coloredFont;
-			font-size: 3rem;
-		}
+        h2 {
+            @include index.coloredFont;
+            font-size: 3rem;
 
-		p {
-			max-width: 800px;
-		}
-	}
+            opacity: 0;
+            transform: translateY(70px);
+            transition: all 1s ease-out;
+            &.active {
+                opacity: 1;
+                transform: translateY(0px);
+            }
+        }
 
-	.fifth-block {
-		width: 100%;
-		margin: 20px;
-		padding: 20px;
-		display: flex;
-		flex-wrap: wrap;
-		align-items: center;
-		gap: 50px;
+        p {
+            max-width: 800px;
 
-		p {
-			padding: 20px;
-			flex: 1;
-			text-align: justify;
-		}
+            opacity: 0;
+            transform: translateY(70px);
+            transition: all 1.5s ease-out;
+            &.active {
+                opacity: 1;
+                transform: translateY(0px);
+            }
+        }
+    }
 
-		.robot-div {
-			aspect-ratio: 5/3;
-			height: 400px;
-			width: auto;
-			margin: 70px auto 0;
-			position: relative;
-			flex-shrink: 0;
-			background-image: url(../../images/factory.jpg);
-			background-size: cover;
+    .fifth-block {
+        width: 100%;
+        margin: 20px;
+        padding: 20px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        gap: 50px;
 
+        p {
+            padding: 20px;
+            flex: 1;
+            text-align: justify;
 
-			.robot {
-				position: absolute;
-				top: -170px;
-				left: 0;
-				width: 550px;
-				transform: scaleX(-1);
-			}
-		}
-	}
+            opacity: 0;
+            transform: translateY(70px);
+            transition: all 2s ease-out;
+            &.active {
+                opacity: 1;
+                transform: translateY(0px);
+            }
+        }
 
+        .robot-div {
+            aspect-ratio: 5/3;
+            height: 400px;
+            width: auto;
+            margin: 70px auto 0;
+            position: relative;
+            flex-shrink: 0;
+            background-image: url(../../images/factory.jpg);
+            background-size: cover;
 
-	.sixth-block {
-	
-		width: 100%;
-		margin: 20px;
-		padding: 20px;
-		
+            .robot {
+                position: absolute;
+                top: -170px;
+                left: 0;
+                width: 550px;
+                transform: scaleX(-1);
+                z-index: 2;
+            }
+        }
+    }
 
-		p {
-			padding: 20px;
-			max-width: 800px;
-		}
-	}
+    .sixth-block {
+        width: 100%;
+        margin: 20px;
+        padding: 20px;
 
+        .text6 {
+            padding: 20px;
+            max-width: 800px;
 
-
+            opacity: 0;
+            transform: translateY(70px);
+            transition: all 2s ease-out;
+            &.active {
+                opacity: 1;
+                transform: translateY(0px);
+            }
+        }
+    }
 }
