--- a/src/pages/scss/NavShared.scss
+++ b/src/pages/scss/NavShared.scss
@@ -10,6 +10,7 @@
     
     .right-side {
         width: 80%;
+        padding: 15px;
         overflow: hidden;
         box-sizing: border-box;
     }
