--- a/src/pages/scss/NavShared.scss
+++ b/src/pages/scss/NavShared.scss
@@ -10,7 +10,7 @@
     
     .right-side {
         width: 80%;
-        padding: 15px;
+        padding: 15px 15px 0 15px;
         overflow: hidden;
         box-sizing: border-box;
     }
@@ -20,7 +20,7 @@
     .right-side {
         width: 100%;
         max-width: 100vw;
-        padding: 15px 15px 0 15px;
+        // padding: 15px 15px 0 15px;
         // position: relative;
 
         // display: block;
