--- a/src/pages/scss/OneProject.scss
+++ b/src/pages/scss/OneProject.scss
@@ -2,6 +2,14 @@
 
 .one-project {
     width: 100%;
+
+
+    // max-width: 1100px;
+// background-color: #141414;
+// padding: 50px;
+align-self: center;
+justify-self: center;
+
     min-height: 100vh;
     box-sizing: border-box;
 
