--- a/src/pages/scss/NavShared.scss
+++ b/src/pages/scss/NavShared.scss
@@ -10,23 +10,26 @@
     
     .right-side {
         width: 80%;
-        padding: 15px 15px 0 15px;
+        padding: 30px 30px 0 30px;
         overflow: hidden;
         box-sizing: border-box;
+        flex: 1;
+        
+        .backround{
+            width: 100%;
+            overflow: hidden;
+            height: 100%;
+            background-color: index.$background-color-secondary;
+        }
     }
-
-
-@media (max-width: index.$screen-size) {
-    .right-side {
-        width: 100%;
-        max-width: 100vw;
-        // padding: 15px 15px 0 15px;
-        // position: relative;
-
-        // display: block;
-        // justify-content: center;
-        // align-items: center;
-    }
+    
+    
+    @media (max-width: index.$screen-size) {
+        .right-side {
+            width: 100%;
+            max-width: 100vw;
+            padding: 15px 15px 0 15px;
+       }
 }
 
 }
