--- a/src/pages/Home/About-Second-Box.scss
+++ b/src/pages/Home/About-Second-Box.scss
@@ -1,60 +1,76 @@
-@use '../../index.scss';
+@use "../../index.scss";
 
 .about {
-    .second-block {
-        margin-bottom: 30px;
-        // margin-top: 30px;
-        width: 100%;
-        display: flex;
+	.second-block {
+		margin-bottom: 30px;
+		margin-top: 30px;
+		width: 100%;
+		display: flex;
+		box-sizing: border-box;
+		// background-color: index.$background-color-secondary;
+		// border-radius: 15px;
 
-        .box {
-            display: flex;
-            flex-wrap: wrap;
-            width: 100%;
-            box-sizing: border-box;
-            margin: 100px 0px 20px;
-            padding: 40px 20px;
-            align-items: center;
-            justify-content: space-around;
+		.box {
+			display: flex;
+			flex-wrap: wrap;
+			width: 100%;
+			height: 100%;
+			box-sizing: border-box;
+			// margin: 50px 0px 20px;
+			// padding: 40px 20px;
+			// align-items: center;
+			// justify-content: space-around;
 
-            border: rgb(14, 145, 206) solid 3px;
-            border-right-color: transparent;
-            border-left-color: transparent;
-            border-bottom-color: transparent;
+			// border: rgb(14, 145, 206) solid 3px;
+			border-right-color: transparent;
+			border-left-color: transparent;
+			border-bottom-color: transparent;
 
-            p {
-                width: 100%;
-                max-width: 700px;
-                margin: 30px;
-                padding-left: 20px;
-                flex: 1;
-                text-align: justify;
+			// background-color: black;
+			border-radius: 15px;
+			gap: 30px;
 
-                opacity: 0;
-                transform: translateY(70px);
-                transition: all 1s ease-out;
-                &.active {
-                    opacity: 1;
-                    transform: translateY(0px);
-                }
-            }
+			.box {
+				height: auto;
+				width: 100%;
+				flex: 1;
+				background-color: index.$background-color-secondary;
 
-            .working {
-                width: 25vw;
-                height: 25vw;
-                margin: 40px 20px 20px;
+				p {
+					max-width: 700px;
+                    align-self: center;
+					text-align: justify;
+                    padding: 25px;
 
-                min-width: 300px;
-                min-height: 300px;
+					opacity: 0;
+					transform: translateY(70px);
+					transition: all 1s ease-out;
 
-                opacity: 0;
-                
-                &.active {
-                    // transition: all 2s ease-in-out;
-                    // transform: scale(1.15);
-                    opacity: 1;
-                }
-            }
-        }
-    }
+					&.active {
+						opacity: 1;
+						transform: translateY(0px);
+					}
+				}
+			}
+			.working {
+				// width: 25vw;
+				// height: 25vw;
+				// margin: 40px 20px 20px;
+
+				min-width: 300px;
+				min-height: 300px;
+
+				opacity: 0;
+
+				background-color: index.$background-color-secondary;
+				border-radius: 15px;
+
+				&.active {
+					// transition: all 2s ease-in-out;
+					// transform: scale(1.15);
+					opacity: 1;
+				}
+			}
+		}
+	}
 }
