--- a/src/pages/scss/NavShared.scss
+++ b/src/pages/scss/NavShared.scss
@@ -7,19 +7,27 @@
     margin: 0;
     display: flex;
     flex-direction: row;
+
+    justify-content: center;
     
     .right-side {
         width: 80%;
+        max-width: 1300px;
         padding: 30px 30px 0 30px;
         overflow: hidden;
         box-sizing: border-box;
         flex: 1;
         
+        // display: flex;
+        // justify-items: center;
+        
+        // justify-content: center;
+        // align-items: center;
+        
         .backround{
             width: 100%;
             overflow: hidden;
             height: 100%;
-            background-color: index.$background-color-secondary;
         }
     }
     
