--- a/src/pages/Home/About-Responsivity-Width.scss
+++ b/src/pages/Home/About-Responsivity-Width.scss
@@ -24,11 +24,11 @@
                 margin: 0;
                 padding: 0;
                 .working {
-                    margin: 20px 0;
+                    // margin: 20px 0;
                 }
 
                 p {
-                    margin: 40px 0;
+                    // margin: 40px 0;
                     padding: 0;
                 }
             }
@@ -39,7 +39,6 @@
         }
 
         .fourth-block {
-            margin: 0;
 
             // Tech bars
             .bars {
