--- a/src/pages/Home/About-Second-Box.scss
+++ b/src/pages/Home/About-Second-Box.scss
@@ -27,20 +27,28 @@
 			border-bottom-color: transparent;
 
 			// background-color: black;
-			border-radius: 15px;
 			gap: 30px;
 
-			.box {
+			.box-text {
 				height: auto;
 				width: 100%;
 				flex: 1;
+				flex-grow: 2;
+				// order: 1;
 				background-color: index.$background-color-secondary;
+				border-radius: index.$box-radius;
+
+                display: flex;
+                justify-content: center;
+                align-items: center;
+
 
 				p {
 					max-width: 700px;
-                    align-self: center;
+					// align-self: center;
+                   
 					text-align: justify;
-                    padding: 25px;
+					padding: 25px;
 
 					opacity: 0;
 					transform: translateY(70px);
@@ -52,23 +60,25 @@
 					}
 				}
 			}
-			.working {
-				// width: 25vw;
-				// height: 25vw;
-				// margin: 40px 20px 20px;
-
-				min-width: 300px;
-				min-height: 300px;
-
-				opacity: 0;
-
+			.box-workingimg {
+				flex: 1;
+                min-width: 270px;
+				flex-grow: 1;
 				background-color: index.$background-color-secondary;
-				border-radius: 15px;
+				border-radius: index.$box-radius;
+				display: flex;
+				justify-content: center;
+				align-items: center;
 
-				&.active {
-					// transition: all 2s ease-in-out;
-					// transform: scale(1.15);
-					opacity: 1;
+				.working {
+					aspect-ratio: 1/1;
+					width: 90%;
+
+					opacity: 0;
+
+					&.active {
+						opacity: 1;
+					}
 				}
 			}
 		}
