front page update

--- a/src/pages/Home/About-Second-Box.scss
+++ b/src/pages/Home/About-Second-Box.scss
@@ -48,6 +48,7 @@
 					// align-self: center;
                    
 					text-align: justify;
+					hyphens: auto; 
 					padding: 25px;
 
 					opacity: 0;
