--- a/src/pages/navShared/scss/Footer.scss
+++ b/src/pages/navShared/scss/Footer.scss
@@ -8,10 +8,10 @@
 	// margin: 0px;
 	.wave{
 		// background-color: aqua;
-		fill: index.$second-color;
+		fill: index.$background-color-secondary;
 	}
 	.background{
-		background-color: index.$second-color;
+		background-color: index.$background-color-secondary;
 		p{
 			margin: 0;
 			padding: 10px 0 10px 40px;
