--- a/src/pages/Home/About-Third-Box.scss
+++ b/src/pages/Home/About-Third-Box.scss
@@ -3,7 +3,7 @@
 .about {
 	.third-block {
 		width: 100%;
-		margin: 30px 0 0px;
+		margin: 15px 0 0px;
 		z-index: 2;
 
 		background-color: index.$background-color-secondary;
@@ -11,7 +11,7 @@
 	}
 
 	.fourth-block {
-		margin: 30px 0 0px;
+		margin: 15px 0 0px;
 		width: 100%;
 		height: auto;
 		display: flex;
@@ -21,7 +21,7 @@
 		// justify-content: center;
 		justify-content: space-around;
 		align-content: space-around;
-		gap: 30px;
+		gap: 15px;
 
 		.box-text {
 			background-color: index.$background-color-secondary;
@@ -36,11 +36,11 @@
 			align-items: center;
 
 			text-align: justify;
-			hyphens: auto; 
+			hyphens: auto;
 			h2 {
 				@include index.coloredFont;
 				font-size: 3rem;
-margin-bottom: 5px;
+				margin-bottom: 5px;
 				opacity: 0;
 				transform: translateY(70px);
 				transition: all 1s ease-out;
@@ -73,10 +73,10 @@ margin-bottom: 5px;
 
 	.fifth-block {
 		width: 100%;
-		margin: 30px 0 0;
+		margin: 15px 0 0;
 		display: flex;
 		flex-wrap: wrap;
-		gap: 30px;
+		gap: 15px;
 
 		.box-text {
 			flex: 1;
@@ -91,7 +91,7 @@ margin-bottom: 5px;
 				padding: 30px;
 				flex: 1;
 				text-align: justify;
-				hyphens: auto; 
+				hyphens: auto;
 
 				opacity: 0;
 				transform: translateY(70px);
@@ -141,15 +141,16 @@ margin-bottom: 5px;
 
 	.sixth-block {
 		width: 100%;
-		margin: 30px 0 0;
+		margin: 15px 0 0;
 
 		background-color: index.$background-color-secondary;
 		border-radius: index.$box-radius;
 
 		.text6 {
 			padding: 20px;
+			margin: 0;
 			text-align: justify;
-			hyphens: auto; 
+			hyphens: auto;
 			// max-width: 800px;
 
 			opacity: 0;
@@ -162,15 +163,37 @@ margin-bottom: 5px;
 		}
 	}
 
-	.seventh-block {
+	.seven-block{
 		width: 100%;
-		margin: 30px 0 0;
-	
+		margin: 15px 0 0;
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		gap: 15px;
 
-		.box-email {
+
+
+		
+
+		.box-email{
+			width: 100%;
+			flex: 1;
+			flex-grow: 1.4;
 			background-color: index.$background-color-secondary;
 			border-radius: index.$box-radius;
-			flex: 1;
+			
+			padding: 35px 0;
+			
+		}
+		
+		.box-text{
+			flex:1;
+			flex-grow: 1;
+			background-color: index.$background-color-secondary;
+			border-radius: index.$box-radius;
+			min-width: 270px;
 		}
 	}
+
+
 }
